syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.secret.service;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message AuthToken {
    string token = 1;
}

message SCPSecret {
    string secretId = 1;
    string privateKey = 2;
    string publicKey = 3;
    string passphrase = 4;
}

message SCPSecretGetRequest {
    string secretId = 1;
    AuthToken authzToken = 2;
}

message SCPSecretCreateRequest {
    string privateKey = 1;
    string publicKey = 2;
    string passphrase = 3;
    AuthToken authzToken = 5;
}

message SCPSecretUpdateRequest {
    string secretId = 1;
    string privateKey = 2;
    string publicKey = 3;
    string passphrase = 4;
    AuthToken authzToken = 6;
}

message SCPSecretDeleteRequest {
    string secretId = 1;
    AuthToken authzToken = 2;
}

service  SecretService {
    rpc getSCPSecret (SCPSecretGetRequest) returns (SCPSecret) {
        option (google.api.http) = {
           get: "/v1.0/secret/scp"
        };
    }

    rpc createSCPSecret (SCPSecretCreateRequest) returns (SCPSecret) {
        option (google.api.http) = {
           post: "/v1.0/secret/scp"
        };
    }

    rpc updateSCPSecret (SCPSecretUpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
           put: "/v1.0/secret/scp"
        };
    }

    rpc deleteSCPSecret (SCPSecretDeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
           delete: "/v1.0/secret/scp"
        };
    }
}